force-app/main/default/objects/clofor_com_cfs__Non_Standard_Exchange_Rate__c/fields/clofor_com_cfs__EXCHANGE_RATE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EXCHANGE_RATE__c</fullName>
    <label>Standard Exchange Rate Id</label>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipName>Non_Standard_Exchange_Rate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>