force-app/main/default/objects/clofor_com_cfs__Non_Standard_Exchange_Rate__c/fields/clofor_com_cfs__Selling_Ex_Rate_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Selling_Ex_Rate_To_Partner__c</fullName>
    <description>Special selling ex-rate to partner</description>
    <inlineHelpText>Special selling ex-rate to partner</inlineHelpText>
    <label>Selling Exchange Rate To Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>