force-app/main/default/objects/clofor_com_cfs__Non_Standard_Exchange_Rate__c/recordTypes/clofor_com_cfs__Customer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Customer</fullName>
    <active>true</active>
    <description>Apply to customer</description>
    <label>Customer</label>
</RecordType>