force-app/main/default/objects/clofor_com_cfs__Non_Standard_Exchange_Rate__c/recordTypes/clofor_com_cfs__Partner.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Partner</fullName>
    <active>true</active>
    <description>Apply to partner</description>
    <label>Partner</label>
</RecordType>